<?xml version="1.0" encoding="UTF-8"?>
<!-- /******************************************************************************* 
	* Copyright (c) 2012 GigaSpaces Technologies Ltd. All rights reserved * * 
	The software source code is proprietary and confidential information of GigaSpaces. 
	* You may use the software source code solely under the terms and limitations 
	of * The license agreement granted to you by GigaSpaces. *******************************************************************************/ -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <artifactId>xap-session-sharing-manager-itests</artifactId>
    <groupId>com.gigaspaces.http-session.qa</groupId>
    <name>xap-session-sharing-manager-itests</name>
    <version>12.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>data-model</module>
        <module>web</module>
        <module>sys-tests</module>
    </modules>

    <properties>
        <slf4j.version>1.6.4</slf4j.version>
        <kryo.version>2.22</kryo.version>
        <commons.codec.version>1.9</commons.codec.version>
        <slf4j.version>1.6.4</slf4j.version>
        <gsVersion>${project.version}</gsVersion>
        <compileSource>1.6</compileSource>
        <testCompileSource>1.6</testCompileSource>
        <compileJdkPath>/usr/lib/jvm/java-7-oracle</compileJdkPath>
        <testCompileJdkPath>/usr/lib/jvm/java-7-oracle</testCompileJdkPath>
        <xap.home>${env.XAP_HOME}</xap.home>
    </properties>
    <repositories>
        <repository>
            <id>org.openspaces</id>
            <name>OpenSpaces</name>
            <url>http://maven-repository.openspaces.org</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
        </repository>
    </repositories>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.gigaspaces.http-session</groupId>
                <artifactId>gs-session-manager</artifactId>
                <version>${gsVersion}</version>
                <!--<scope>import</scope>-->
                <exclusions>
                    <exclusion>
                        <artifactId>shiro-all</artifactId>
                        <groupId>org.apache.shiro</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>kryo</artifactId>
                        <groupId>com.esotericsoftware.kryo</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>xstream</artifactId>
                        <groupId>com.thoughtworks.xstream</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>xmlbeans</artifactId>
                        <groupId>org.apache.xmlbeans</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>slf4j-api</artifactId>
                        <groupId>org.slf4j</groupId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>com.gigaspaces</groupId>
                <artifactId>gs-openspaces</artifactId>
                <version>${gsVersion}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-io</artifactId>
                <version>1.3.2</version>
            </dependency>

            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons.codec.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <reporting>
        <plugins>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <fork>true</fork>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
                <version>2.3.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <showSuccess>true</showSuccess>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>use-xap-jars</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>com.gigaspaces.http-session</groupId>
                        <artifactId>gs-session-manager</artifactId>
                        <version>${gsVersion}</version>
                        <scope>system</scope>
                        <systemPath>${xap.home}/lib/optional/httpsession/gs-session-manager.jar</systemPath>
                    </dependency>
                    <dependency>
                        <groupId>com.gigaspaces</groupId>
                        <artifactId>gs-openspaces</artifactId>
                        <version>${gsVersion}</version>
                        <scope>system</scope>
                        <systemPath>${xap.home}/lib/required/gs-openspaces.jar</systemPath>
                    </dependency>
                    <dependency>
                        <groupId>com.gigaspaces</groupId>
                        <artifactId>gs-runtime</artifactId>
                        <version>${gsVersion}</version>
                        <scope>system</scope>
                        <systemPath>${xap.home}/lib/required/gs-runtime.jar</systemPath>
                    </dependency>
                    <dependency>
                        <groupId>com.gigaspaces</groupId>
                        <artifactId>open-core-common</artifactId>
                        <version>${gsVersion}</version>
                        <scope>system</scope>
                        <systemPath>${xap.home}/lib/required/open-core-common.jar</systemPath>
                    </dependency>
                    <dependency>
                        <groupId>com.gigaspaces</groupId>
                        <artifactId>open-core-asm</artifactId>
                        <version>${gsVersion}</version>
                        <scope>system</scope>
                        <systemPath>${xap.home}/lib/required/open-core-asm.jar</systemPath>
                    </dependency>
                    <dependency>
                        <groupId>com.gigaspaces</groupId>
                        <artifactId>open-core-trove</artifactId>
                        <version>${gsVersion}</version>
                        <scope>system</scope>
                        <systemPath>${xap.home}/lib/required/open-core-trove.jar</systemPath>
                    </dependency>

                    <!-- OpenSpaces dependencies -->
                    <dependency>
                        <groupId>com.gigaspaces</groupId>
                        <artifactId>open-core-map</artifactId>
                        <version>${gsVersion}</version>
                        <scope>system</scope>
                        <systemPath>${xap.home}/lib/required/open-core-map.jar</systemPath>
                    </dependency>
                    <dependency>
                        <groupId>com.gigaspaces</groupId>
                        <artifactId>open-core-near-cache</artifactId>
                        <version>${gsVersion}</version>
                        <scope>system</scope>
                        <systemPath>${xap.home}/lib/required/open-core-near-cache.jar</systemPath>
                    </dependency>
                    <dependency>
                        <groupId>com.gigaspaces</groupId>
                        <artifactId>closed-core-security</artifactId>
                        <version>${gsVersion}</version>
                        <scope>system</scope>
                        <systemPath>${xap.home}/lib/optional/security/closed-core-security.jar</systemPath>
                    </dependency>
                    <dependency>
                        <groupId>com.gigaspaces</groupId>
                        <artifactId>closed-core-interop</artifactId>
                        <version>${gsVersion}</version>
                        <scope>system</scope>
                        <systemPath>${xap.home}/lib/optional/interop/closed-core-interop.jar</systemPath>
                    </dependency>
                </dependencies>
            </dependencyManagement>
            <dependencies>
                <dependency>
                    <groupId>com.gigaspaces</groupId>
                    <artifactId>gs-openspaces</artifactId>
                    <version>${gsVersion}</version>
                    <type>pom</type>
                    <scope>import</scope>
                </dependency>
                <dependency>
                    <groupId>com.gigaspaces</groupId>
                    <artifactId>gs-runtime</artifactId>
                    <version>${gsVersion}</version>
                    <type>pom</type>
                    <scope>import</scope>
                </dependency>
                <dependency>
                    <groupId>com.gigaspaces</groupId>
                    <artifactId>open-core-common</artifactId>
                    <version>${gsVersion}</version>
                    <type>pom</type>
                    <scope>import</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.maven.surefire</groupId>
                    <artifactId>surefire-junit4</artifactId>
                    <version>2.17</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
    <!--    <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <fork>true</fork>
                        <source>${compileSource}</source>
                        <target>${compileSource}</target>
                        <executable>${compileJdkPath}/bin/javac</executable>
                        <compilerVersion>${compileSource}</compilerVersion>
                    </configuration>
                    <executions>
                        <execution>
                            <id>test-compile</id>
                            <phase>process-test-sources</phase>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                            <configuration>
                                <fork>true</fork>
                                <source>${testCompileSource}</source>
                                <target>${testCompileSource}</target>
                                <executable>${testCompileJdkPath}/bin/javac</executable>
                                <compilerVersion>${testCompileSource}</compilerVersion>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </build>-->
</project>
